# user-management

./: README.md  alembic.ini  docker-compose.yml  dockerFile  pyproject.toml  setup.cfg  setup.sh
contracts/: common.yaml  user.yaml
migrations/: env.py
migrations/versions/: 20220813_14_38_create_user.py  20220813_15_01_create_user.py  20220820_09_54_add_gender_column.py
openapi_definition/v1/: api.yaml  api_config.json  common.yaml  openapi.json  openapi.yaml
openapi_definition/v1/client/: .gitlab-ci.yml  .travis.yml  README.md  openapi.yaml  setup.py  tox.ini
openapi_definition/v1/client/docs/: DefaultApi.md  Error.md  ErrorResponse.md  Gender.md  GetUsersResponse.md  User.md
openapi_definition/v1/client/test/: test_default_api.py  test_error.py  test_error_response.py  test_gender.py  test_get_users_response.py  test_user.py
openapi_definition/v1/client/user_management_client_v1/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi_definition/v1/client/user_management_client_v1/api/: __init__.py  default_api.py
openapi_definition/v1/client/user_management_client_v1/models/: __init__.py  error.py  error_response.py  gender.py  get_users_response.py  user.py
src/user/: main.py
src/user/core/: config.py  security.py
src/user/database/: Gender.py  Session.py  User.py  UserDocument.py  __init__.py
src/user/database/crud/: crud_base.py  crud_user.py
src/user/database/models/: BaseModel.py  Gender.py  User.py  UserDocument.py  UserSpecifications.py  UserStatus.py  __init__.py
src/user/endpoints/: deps.py
src/user/endpoints/v1/: user.py
src/user/endpoints/v1/get_user/: get_user.py
src/user/managers/: user_manager.py
src/user/mappers/: enum_mapper.py
src/user/schemas/: Address.py  UserBase.py  UserResponse.py  __init__.py
src/user/v1/endpoints/: user.py
src/user/v1/endpoints/create_user/: create_user.py
src/user/v1/endpoints/create_user/schemas/: CreateUserRequest.py
src/user/v1/endpoints/delete_user/: delete_user.py
src/user/v1/endpoints/get_user/: get_user.py
src/user/v1/endpoints/get_user/mappers/: gender_mapper.py  user_mapper.py
src/user/v1/endpoints/get_user/schemas/: GetUserCriteria.py  GetUserResponse.py
src/user/v1/endpoints/mappers/: user_mapper.py  user_status_mapper.py
src/user/v1/endpoints/update_user/: update_user.py
src/user/v1/endpoints/update_user/schemas/: UpdateUserRequest.py
src/user_management/: main.py
src/user_management/core/: config.py  security.py
src/user_management/database/: Session.py  __init__.py  deps.py
src/user_management/database/crud/: crud_base.py  crud_user.py
src/user_management/database/models/: BaseModel.py  Gender.py  User.py  UserSpecifications.py  UserStatus.py  __init__.py
src/user_management/managers/: user_manager.py
src/user_management/schemas/: Address.py  UserBase.py  UserResponse.py  UserStatus.py  __init__.py
src/user_management/v1/endpoints/: user.py
src/user_management/v1/endpoints/create_user/: create_user.py
src/user_management/v1/endpoints/create_user/schemas/: CreateUserRequest.py
src/user_management/v1/endpoints/delete_user/: delete_user.py
src/user_management/v1/endpoints/get_user/: get_user.py
src/user_management/v1/endpoints/get_user/schemas/: GetUserResponse.py
src/user_management/v1/endpoints/mappers/: gender_mapper.py  user_mapper.py  user_status_mapper.py
src/user_management/v1/endpoints/update_user/: update_user.py
src/user_management/v1/endpoints/update_user/schemas/: UpdateUserRequest.py
tests/: test_prestart.py
tests/endpoints/v1/get_user_tests/: SuccessTests.py  TestContext.py  test_base.py
tests/endpoints/v1/get_user_tests/random_data/: random_attributes.py
tests/fixtures/: ScopedTestData.py  TestFixture.py  UserTestFixture.py
tests/utils/: Randomizer.py
