[metadata]
author=Prashanna R
description=User Management Microservice
name=user-management
version=attr: _version.__version__

[options]
packages=find:
package_dir=
    =src
zip_safe=False
install_requires=
    fastapi==0.79.0
    gunicorn==20.1.0
    psycopg2-binary==2.9.3
    python-jose[cryptography]==3.1.0
    sqlmodel==0.0.6

[options.entry_points]
console_scripts=
    create_database=build.db_commands:create_database [build]
    dead_code=build.build_commands:dead_code [build]
    drop_database=build.db_commands:drop_database [build]
    format_check=build.build_commands:format_check [build]
    format_fix=build.build_commands:format_fix [build]
    generate_openapi_client=build.build_commands:generate_openapi_client [build]
    imports_check=build.build_commands:imports_check [build]
    imports_fix=build.build_commands:imports_fix [build]
    lint=build.build_commands:lint [build]
    unit_test=build.build_commands:unit_test [test]

[options.extras_require]
build=
    alembic==1.7.7
    boto3-stubs==1.20.39
    pylint-quotes==0.2.3
    sqlalchemy-stubs==0.4

[options.packages.find]
where=src
exclude=build

[options.package_data]
*=py.typed

[pycodestyle]
max-line-length=160
