[metadata]
author=Prashanna R
description=User Management Microservice
name=user_management
version=attr: _version.__version__

[options]
packages=find:
package_dir=
    =src
zip_safe=False
install_requires=
    fastapi==0.79.0
    psycopg2-binary==2.9.3
    pydantic[email]==1.9.2
    python-jose[cryptography]==3.1.0
    sqlmodel==0.0.6
    uvicorn==0.18.3

[options.entry_points]

[options.extras_require]
build=
    alembic==1.7.7
    boto3-stubs==1.20.39
    pylint-quotes==0.2.3
    pytest==7.1.2
    pytest-cov==3.0.0
    pytz==2022.2
    requests==2.28.1
    sqlalchemy-stubs==0.4

[options.packages.find]
where=src
exclude=build

[options.package_data]
*=py.typed

[pycodestyle]
max-line-length=160
